fix orderbooks height on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -621,7 +621,7 @@ strong {
 }
 
 .OrderBook {
-	.col-md-4 {
+	.col-lg-4 {
 		> div {
 			height: 100%;
 			> .card {
